@@ -1,3 +1,8 @@
+2010-08-20  Vladimir Kargov  <kargov@gmail.com>
+
+	* graphite-scop-detection.c (graphite_can_represent_loop): Correct the
+	description.
+
 2010-08-20  Sebastian Pop  <sebastian.pop@amd.com>
 
 	PR middle-end/45230
